crates/tinc/build/src/codegen/cel/functions/snapshots/tinc_build__codegen__cel__functions__all__tests__all_proto_map.snap
---
source: crates/tinc/build/src/codegen/cel/functions/all.rs
expression: result
---
exit status: 0
--- test_stdout
running 1 test
.
test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.00s
--- expanded
#![feature(prelude_import)]
#[prelude_import]
use std::prelude::rust_2024::*;
#[macro_use]
extern crate std;
#[allow(dead_code)]
fn all(
    input: &std::collections::BTreeMap<i32, f32>,
) -> Result<bool, ::tinc::__private::cel::CelError<'static>> {
    Ok({
        let mut iter = ((input).keys()).into_iter();
        loop {
            let Some(item) = iter.next() else {
                break true;
            };
            if !(::tinc::__private::cel::to_bool(
                ::tinc::__private::cel::CelValue::cel_gt(
                    ::tinc::__private::cel::CelValueConv::conv(item),
                    ::tinc::__private::cel::CelValue::Number(
                        ::tinc::__private::cel::NumberTy::I64(2i64),
                    ),
                )?,
            )) {
                break false;
            }
        }
    })
}
